# AI_testing_2025

02_day/02-pytest/nc1/: README.md  my_test.html  pyproject.toml  test_sample.py
02_day/02-pytest/nc1/src/nc1/: __init__.py  calculator.py  human.py
02_day/02-pytest/nc1/tests/: test_calculator.py  test_human.py
02_day/pr1/: .env  pyproject.toml  test_cases.py
02_day/pr1/src/pr1/: __init__.py  nc.py  users.py
02_day/pytestllm/: pyproject.toml
02_day/pytestllm/src/pytestllm/: __init__.py  login_tests.json  main.py
02_day/pytestllm/tests/: test_main.py
03_day/: Example.md  ML_model_testing.ipynb  README.md
04_day/: BELU.md
