[project]
name = "pytestllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sir Qasim", email = "m.qasim077@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.61.8",
    "pytest>=8.3.4",
]

[project.scripts]
pytestllm = "pytestllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
