[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nc1"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "A simple calculator package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.scripts]
nc1 = "nc1:main"
